--- a/Examples/src/components/index.scss
+++ b/Examples/src/components/index.scss
@@ -68,6 +68,7 @@ body {
 ::-webkit-scrollbar {
     background-color: var(--bg) !important;
     width: 8px;
+    height: 8px;
     border-radius: 10px;
 }
 
